set(CMAKE_CXX_FLAGS "-std=gnu++11")
set (PCAP_PP_HEADER_PATH "${PROJECT_SOURCE_DIR}/3rd/PcapPlusPlus/Dist/header")
set (PCAP_PP_LIB_PATH "${PROJECT_SOURCE_DIR}/3rd/PcapPlusPlus/Dist")
link_directories(${PCAP_PP_LIB_PATH})
include_directories(${PCAP_PP_HEADER_PATH})
find_library(PCAP_PCAP libPcap++.a ${PCAP_PP_LIB_PATH})
find_library(PCAP_PACKET libPacket++.a ${PCAP_PP_LIB_PATH})
find_library(PCAP_COMMON libCommon++.a ${PCAP_PP_LIB_PATH})
add_executable(TcpdumpFileReaderCeePeePee TcpdumpFileReaderCeePeePee.cxx)
target_link_libraries(TcpdumpFileReaderCeePeePee ${PCAP_PCAP})
target_link_libraries(TcpdumpFileReaderCeePeePee ${PCAP_PACKET})
target_link_libraries(TcpdumpFileReaderCeePeePee ${PCAP_COMMON})
target_link_libraries(TcpdumpFileReaderCeePeePee pcap)
target_link_libraries(TcpdumpFileReaderCeePeePee pthread)
install (TARGETS TcpdumpFileReaderCeePeePee DESTINATION ".")
